# openEagle

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.codex/: agent.md
backend/: pyproject.toml
backend/app/: __init__.py  agent_service.py  config.py  default_tools.py  main.py  models.py  runtime_state.py  solo_executor.py  solo_service.py  solo_toolkit.py
backend/app/providers/: agno_provider.py  base.py  mock.py
backend/scripts/: build-sidecar.ps1
docs/: 开发指南.md  架构设计理念.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ChatPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  ThemeToggle.tsx
src/hooks/: useBackendConnection.ts  useTheme.ts
src/lib/: storage.ts
src/types/: protocol.ts
