[project]
name = "open-eagle-agent"
version = "0.1.0"
description = "Python backend for openEagle"
requires-python = ">=3.12"
dependencies = [
  "agno",
  "fastapi>=0.115.12",
  "openai",
  "mss>=10.1.0",
  "pyautogui>=0.9.54",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.11.1"
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.13.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
