[package]
name = "open-eagle"
version = "0.1.0"
description = "Desktop shell for openEagle"
authors = ["Codex"]
edition = "2021"

[lib]
name = "open_eagle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-shell = "2.3.1"
tokio = { version = "1.43.0", features = ["sync", "time"] }
